# api/server/sdk/api/api.swagger.json
@@ -213,6 +213,17 @@
         "title": "Defines the operation types available to resize a storage pool",
         "type": "string"
       },
+      "StorageNodeSecurityStatus": {
+        "default": "UNSPECIFIED",
+        "description": " - UNSPECIFIED: Security status type is unknown\n - UNSECURED: Node is unsecure\n - SECURED: Node is secured with authentication and authorization\n - SECURED_ALLOW_SECURITY_REMOVAL: Node is secured, but in the process of removing security. This state allows\nother unsecured nodes to join the cluster since the cluster is in the process\nof removing secuirty authenticaiton and authorization.",
+        "enum": [
+          "UNSPECIFIED",
+          "UNSECURED",
+          "SECURED",
+          "SECURED_ALLOW_SECURITY_REMOVAL"
+        ],
+        "type": "string"
+      },
       "StorageRebalanceAuditStorageRebalanceAction": {
         "default": "ADD_REPLICA",
         "description": "- ADD_REPLICA: Indicates new replica was added\n - REMOVE_REPLICA: Indicates existing replica was removed",
@@ -4127,6 +4138,9 @@
             "description": "SchedulerNodeName is name of the node in scheduler context. It can be\nempty if unable to get the name from the scheduler.",
             "type": "string"
           },
+          "security_status": {
+            "$ref": "#/components/schemas/StorageNodeSecurityStatus"
+          },
           "status": {
             "$ref": "#/components/schemas/openstorageapiStatus"
           }
@@ -5233,7 +5247,7 @@
   },
   "info": {
     "title": "OpenStorage SDK",
-    "version": "0.101.4"
+    "version": "0.101.5"
   },
   "openapi": "3.0.0",
   "paths": {
